2009-11-19 Tobias Liebig  <liebig@networkteam.com>

	* initial code generated with kickstarter