@@ -16,3 +16,6 @@ pageid=1
 
 # cat=basic//10; type=string; label= Tweet template : ###TEXT### The actual text, ###URL## shortend URL to the post, ###SIGNATURE### signature form BE-User
 tweet=###TEXT### - ###URL### (by ###SIGNATURE###)
+
+# cat=basic//10; type=string; label= Enable for these extensions/tables: (choose from: tt_news,t3blog,tt_content,pages,kb_eventboard)
+enableFor=tt_news,t3blog
